# holochain-client-crates

./: Cargo.toml  README.md
core/: Cargo.toml  expanded.rs
core/examples/: call_over_ws.rs
core/src/: lib.rs  lib_unexpanded.rs
macros/: Cargo.toml
macros/src/: lib.rs
