[package]
name = "holochain-client-core"
version = "0.1.0"
authors = ["Willem Olding <willemolding@gmail.com>"]
edition = "2018"

[dependencies]
jsonrpc-derive = "14.0.5"
jsonrpc-core = "14.0.5"
serde_json = "1.0.48"
jsonrpc-core-client = { version = "14.0.5", features = ["ws"] }
url = "1.7.0"
tokio = "0.1.22"
